--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,58 @@
 @tailwind utilities;
 
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding: 0px;
+  margin: 0px;
+  height: 100vh;
+  width: 100vw;
+}
+
+html,
+body,
+#app,
+#app > div {
+  height: 100vh;
+  width: 100vw;
+}
+
+#root {
+  margin: 0px;
+  width: 100vw;
+  height: 100vh;
+
+  background-color: green;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+@layer components {
+  .wrapper {
+    @apply w-full h-full bg-red-300 flex items-center justify-center;
+  }
+
+  .card {
+    @apply w-2/5 pt-8 pb-8 shadow-md bg-white rounded-lg p-4 flex flex-col justify-center self-center justify-self-center;
+  }
+
+  .input {
+    @apply w-full h-6 rounded border border-gray-400 p-1 mb-2;
+  }
+
+  .label {
+    @apply self-stretch text-gray-900 text-xs text-left mb-1;
+  }
+
+  .title {
+    @apply text-base self-stretch text-center font-bold;
+  }
+
+  .separator {
+    @apply w-52 h-px bg-black mt-2 mb-2;
+  }
 }
